<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- SomethingOS Settings -->
    <string name="somethingos_dashboard_title">SomethingOS</string>

    <!-- Categories -->
    <string name="something_simulation_title">Simulation</string>
    <string name="something_simulation_summary">Simulate apps and behaviors</string>
    <string name="something_interface_title">Interface</string>
    <string name="something_interface_summary">Customize the look and feel</string>
    <string name="something_system_options_title">System Options</string>
    <string name="something_system_options_summary">Tweak system settings</string>
    <string name="something_extensions_title">Extensions</string>
    <string name="something_extensions_summary">Manage your extensions</string>

    <!-- Interface / Bootanimation -->
    <string name="bootanimation_title">Boot Animation</string>
    <string name="bootanimation_summary">Customize your bootanimation</string>
    <string name="preview_category_title">Preview</string>
    <!-- Interface / Navbar -->
    <string name="navbar_category_title">Navigation bar</string>
    <string name="navbar_visibility_title">Navigation bar visibility</string>
    <string name="navbar_visibility_summary">Show the navigation bar</string>

    <!-- System Options -->
    <string name="app_category">Applications</string>
    <string name="app_downgrade_title">Allow package downgrade</string>
    <string name="app_downgrade_summary">Allow installation of lower version of an app</string>
    <string name="ignore_window_secure_title">Ignore window secure flags</string>
    <string name="ignore_window_secure_summary">Remove screenshot and screenrecord limits for all apps. This can be convenient in some cases but may lead to privacy leaks.</string>

    <!-- Simulation -->
    <string name="google_category">Google</string>
    <string name="gphotos_title">Unlimited Google Photos</string>
    <string name="gphotos_summary">Simulate a Pixel XL to get unlimited storage</string>
    <string name="gapps_title">Google Apps</string>
    <string name="gapps_summary">Simulate the latest Pixel on Google apps</string>
    <!-- Integrity -->
    <string name="something_play_integrity_dashboard_title">Play Integrity</string>
    <string name="play_integrity_summary">Adjust Play Integrity settings</string>
    <string name="play_integrity_update_title">Update Play Integrity</string>
    <string name="play_integrity_update_summary">Apply latest spoof</string>
    <string name="play_update_title">Update</string>
    <string name="play_fingerprint">Spoofed values</string>
    <string name="play_integrity_switch_title">Enable Play Integrity</string>
    <string name="play_options">Options</string>
    <string name="play_integrity_switch_summary">Enable Play Integrity spoof</string>
    <string name="play_integrity_tricky_switch_title">Disable Chain of trust</string>
    <string name="play_integrity_tricky_switch_summary">Will return unsupported for Key Attestation</string>

    <!-- About Something -->
    <string name="about_something_title">About</string>
    <string name="about_something_social">Social</string>
    <string name="something_website_title">Website</string>
    <string name="something_website_summary">Visit our website</string>
    <string name="something_telegram_title">Telegram</string>
    <string name="something_telegram_summary">Join our Telegram group</string>
    <string name="something_twitter_title">Twitter</string>
    <string name="something_twitter_summary">Follow us on Twitter</string>
    <string name="something_paypal_title">Paypal</string>
    <string name="something_paypal_summary">Support the developer with PayPal</string>
    <string name="early_donators">Early Donators</string>
    <string name="somethingos_team">SomethingOS Team</string>
    <string name="something_credits">Credits</string>

    <!-- Status bar - Clock -->
    <string name="statusbar_category_title">Status Bar Tuning</string>
    <string name="status_bar_title">Status bar</string>
    <string name="status_bar_clock_title">Clock</string>

    <string name="status_bar_clock_position_title">Clock position</string>
    <string name="status_bar_clock_position_right">Right</string>
    <string name="status_bar_clock_position_left">Left</string>
    <string name="status_bar_clock_position_center">Center</string>

    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="status_bar_am_pm_normal">Normal</string>
    <string name="status_bar_am_pm_small">Small</string>
    <string name="status_bar_am_pm_hidden">Hidden</string>

    <!-- Status bar - Battery -->
    <string name="status_bar_battery_title">Battery indicator</string>
    <string name="status_bar_battery_style_title">Battery status style</string>
    <string name="status_bar_battery_style_icon_portrait">Icon portrait</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="status_bar_battery_style_text">Text</string>

    <!-- Status bar - Battery percentage -->
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>

    <!-- Status bar - Network Traffic -->
    <string name="network_traffic_settings_title">Network traffic monitor</string>
    <string name="network_traffic_settings_summary">Show current network traffic levels in the status bar</string>
    <string name="network_traffic_mode_title">Display mode</string>
    <string name="network_traffic_mode_disable">Disabled</string>
    <string name="network_traffic_mode_up">Upload only</string>
    <string name="network_traffic_mode_down">Download only</string>
    <string name="network_traffic_mode_all">Upload and download</string>
    <string name="network_traffic_position_title">Position</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when there is no activity</string>
    <string name="network_traffic_units_title">Traffic measurement units</string>
    <string name="network_traffic_units_kilobits">Kilobits per second (kb/s)</string>
    <string name="network_traffic_units_megabits">Megabits per second (Mb/s)</string>
    <string name="network_traffic_units_kilobytes">Kilobytes per second (kB/s)</string>
    <string name="network_traffic_units_megabytes">Megabytes per second (MB/s)</string>
    <string name="network_traffic_units_auto">Automatic (kB/s or MB/s)</string>
    <string name="network_traffic_show_units">Show units</string>
    <string name="network_traffic_show_units_off">Off</string>
    <string name="network_traffic_show_units_on">On</string>
    <string name="network_traffic_show_units_compact">Compact</string>
    <string name="network_traffic_show_units_summary">Whether to show traffic measurement units in the statusbar</string>
    <string name="network_traffic_disabled_clock">Network traffic disabled due to clock position</string>

    <!-- Power menu Styles -->
    <string name="power_menu_category_title">Power Menu</string>
    <string name="power_menu_type_title">Power menu style</string>
    <string name="power_menu_type_lite">Lite (A12)</string>
    <string name="power_menu_type_full">Full (A11)</string>
    <string name="power_menu_type_classic">Classic (A8)</string>
    <string name="power_menu_type_grid">Grid</string>
    <string name="power_menu_type_legacy">Legacy (A7)</string>

    <!-- Button settings - Power menu -->
    <string name="power_menu_type_title">Power menu style</string>
    <string name="power_menu_type_lite">Lite (A12)</string>
    <string name="power_menu_type_full">Full (A11)</string>
    <string name="power_menu_type_classic">Classic (A8)</string>
    <string name="power_menu_type_grid">Grid</string>
    <string name="power_menu_type_legacy">Legacy (A7)</string>
    <string name="power_menu_title">Power menu</string>
    <string name="power_menu_items_title">Power menu items</string>
    <string name="power_menu_screenshot_title">Screenshot</string>
    <string name="power_menu_screenshot_summary">Long-press for partial screenshot</string>
    <string name="power_menu_airplane_title">Airplane mode</string>
    <string name="power_menu_users_title">User switcher</string>
    <string name="power_menu_bug_report_title">Bug report</string>
    <string name="power_menu_bug_report_devoptions_unavailable">Bug reporting is disabled as development settings aren\'t enabled</string>
    <string name="power_menu_bug_report_unavailable_for_user">Bug reporting is disabled for non-primary users.</string>
    <string name="power_menu_emergency_title">Emergency</string>
    <string name="power_menu_devicecontrols_title">Device controls</string>
    <string name="power_menu_advanced_restart_title">Advanced restart</string>
    <string name="power_menu_advanced_restart_summary">When unlocked, include options in the power menu for restarting into recovery or bootloader</string>
    <string name="power_menu_emergency_affordance_enabled">Emergency affordance is enabled</string>

    <!-- Text shown for the title of the restart systemui option -->
    <string name="power_menu_restart_systemui_title">Restart SystemUI</string>

    <!-- Global Actions -->
    <string name="global_actions_advanced_reboot_title">Advanced restart</string>
    <string name="global_actions_advanced_reboot_summary">Show options for recovery and bootloader in power menu</string>

</resources>
