<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/somethingos_dashboard_title">

    <com.android.settingslib.widget.IllustrationPreference
        android:key="something_illustration"
        settings:lottie_rawRes="@raw/something_illustration"
        android:selectable="false"
        android:order="-1001" />

    <Preference
        android:key="something_interface"
        android:title="@string/something_interface_title"
        android:summary="@string/something_interface_summary"
        android:icon="@drawable/ic_interface"
        android:fragment="org.somethingos.somethingsettings.fragments.ui.InterfaceSettings" />

    <Preference
        android:key="something_system_options"
        android:title="@string/something_system_options_title"
        android:summary="@string/something_system_options_summary"
        android:icon="@drawable/ic_system_options"
        android:fragment="org.somethingos.somethingsettings.fragments.system.SystemOptions" />

    <Preference
        android:key="something_simulation"
        android:title="@string/something_simulation_title"
        android:summary="@string/something_simulation_summary" 
        android:icon="@drawable/ic_simulation"
        android:fragment="org.somethingos.somethingsettings.fragments.simulation.SimulationSettings"
    />

    <Preference
        android:key="something_extensions"
        android:title="@string/something_extensions_title"
        android:summary="@string/something_extensions_summary"
        android:icon="@drawable/ic_extension"
    />

    <Preference
        android:key="about_something"
        android:title="@string/about_something_title"
        android:fragment="org.somethingos.somethingsettings.fragments.aboutsomething.AboutSomething"
        android:icon="@drawable/ic_aboutsomething" />


</PreferenceScreen>
