<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/something_interface_title">

    <PreferenceCategory
      android:key="app_category"
      android:title="@string/app_category">

      <co.aospa.framework.preference.GlobalSettingSwitchPreference
        android:key="pm_downgrade_allowed"
        android:title="@string/app_downgrade_title"
        android:summary="@string/app_downgrade_summary"
        android:defaultValue="false" />

      <co.aospa.framework.preference.SecureSettingSwitchPreference
        android:key="window_ignore_secure"
        android:title="@string/ignore_window_secure_title"
        android:summary="@string/ignore_window_secure_summary"
        android:defaultValue="false"/>

    </PreferenceCategory>

</PreferenceScreen>
