<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/something_interface_title">

    <Preference
        android:key="something_bootanimation"
        android:title="@string/bootanimation_title"
        android:summary="@string/bootanimation_summary"
        android:icon="@drawable/ic_bootanimation"
        android:fragment="org.somethingos.somethingsettings.fragments.ui.BootAnimation" />

    <PreferenceCategory
        android:key="statusbar_category"
        android:title="@string/statusbar_category_title">

        <!-- Statusbar Settings -->
        <Preference
            android:key="statusbar_settings"
            android:title="@string/status_bar_title"
            android:fragment="org.somethingos.somethingsettings.fragments.ui.StatusBarSettings" />
    </PreferenceCategory>

</PreferenceScreen>
